--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -25,8 +25,64 @@ html {
 
 
 
+
+.heading-1{
+  @apply text-4xl md:text-[60px] font-prata leading-tight
+}
 .heading-2{
   @apply text-3xl md:text-[48px] font-prata leading-tight
 }
+.heading-3{
+  @apply text-2xl md:text-[38px] font-prata leading-tight
+}
+.heading-4{
+  @apply text-xl md:text-[28px] font-prata leading-tight
+}
+.heading-5{
+  @apply text-lg md:text-[20px] font-prata leading-tight
+}
+
+.heading-5{
+  @apply text-lg  leading-tight
+}
+
+.para-large{
+  @apply text-base md:text-lg
+}
+.para-small{
+  @apply text-[12px]
+}
 
 
+
+
+
+
+
+
+
+.slider {
+  appearance: none;
+  height: 20px; 
+  background: #d1d5db; 
+  border-radius: 10px; 
+  outline: none; 
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; 
+  appearance: none; 
+  width: 30px; 
+  height: 30px; 
+  border-radius: 50%; 
+  background: #EB6F2D; 
+  cursor: pointer; 
+}
+
+.slider::-moz-range-thumb {
+  width: 30px;
+  height: 30px; 
+  border-radius: 50%; 
+  background: #EB6F2D; 
+  cursor: pointer; 
+}
