--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -53,8 +53,11 @@ html {
   @apply text-[13px] md:text-[14px]
 }
 .para-small{
-  @apply text-[12px]
+  @apply text-[12px] md:text-[13px]
 }
+
+
+
 
 
 
